// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timestamp aligns to end 1`] = `
<span
  className="grommetux-timestamp grommetux-timestamp--end"
>
  <span
    className="grommetux-timestamp__date"
  >
    Apr 7, 2015
  </span>
  <span
    className="grommetux-timestamp__time"
  >
    10:00 AM
  </span>
</span>
`;

exports[`Timestamp displays a classname 1`] = `
<span
  className="grommetux-timestamp test"
>
  <span
    className="grommetux-timestamp__date"
  >
    Apr 7, 2015
  </span>
  <span
    className="grommetux-timestamp__time"
  >
    10:00 AM
  </span>
</span>
`;

exports[`Timestamp displays date 1`] = `
<span
  className="grommetux-timestamp"
>
  <span
    className="grommetux-timestamp__date"
  >
    Apr 7, 2015
  </span>
</span>
`;

exports[`Timestamp displays date and time 1`] = `
<span
  className="grommetux-timestamp"
>
  <span
    className="grommetux-timestamp__date"
  >
    Apr 7, 2015
  </span>
  <span
    className="grommetux-timestamp__time"
  >
    10:00 AM
  </span>
</span>
`;

exports[`Timestamp displays date, time, seconds 1`] = `
<span
  className="grommetux-timestamp"
>
  <span
    className="grommetux-timestamp__date"
  >
    Apr 7, 2015
  </span>
  <span
    className="grommetux-timestamp__time"
  >
    10:00:01 AM
  </span>
</span>
`;

exports[`Timestamp displays time 1`] = `
<span
  className="grommetux-timestamp"
>
  <span
    className="grommetux-timestamp__time"
  >
    10:00 AM
  </span>
</span>
`;

exports[`Timestamp displays time with seconds 1`] = `
<span
  className="grommetux-timestamp"
>
  <span
    className="grommetux-timestamp__time"
  >
    10:00:01 AM
  </span>
</span>
`;

exports[`Timestamp has correct default options 1`] = `
<span
  className="grommetux-timestamp"
>
  <span
    className="grommetux-timestamp__date"
  >
    Apr 7, 2015
  </span>
  <span
    className="grommetux-timestamp__time"
  >
    10:00 AM
  </span>
</span>
`;
